fluent-syntax/test/fixtures_behavior/variant_starts_from_nl.ftl
key = {
*[one] Value
    }
//~ ERROR E0014, pos 7
